<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/grey">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_opciones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <RadioGroup
        android:id="@+id/grupo_de_radio_buttons"
        android:focusedByDefault="true"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:textStyle="bold"
            android:id="@+id/radio_buton_rojo"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/rojo"
            android:textColor="@color/red"/>
        <RadioButton

            android:id="@+id/radio_buton_azul"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/azul"
            android:textColor="@color/azul"
            android:textStyle="bold"/>
        <RadioButton
            android:textStyle="bold"
            android:id="@+id/radio_buton_verde"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/verde"
            android:textColor="@color/verde"/>
        <RadioButton
            android:textStyle="bold"
            android:id="@+id/radio_buton_amarillo"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/amarillo"
            android:textColor="@color/amarillo"/>

    </RadioGroup>

    <TextView
        android:id="@+id/texto_que_cambia_de_color"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/texto_que_cambia"/>
    <Button
        android:id="@+id/boton_guardar_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar_color"/>
    <Button
        android:id="@+id/boton_resetear_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar_reset"/>

</LinearLayout>